--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "botstrap": "^0.20.1",
+    "proshopv2": "file:..",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
